\name{NEWS}
\title{News for Package 'R453Plus1Toolbox'}
\encoding{UTF-8}

\section{Version 1.9.1}{
  \itemize{
    \item Added function writeSFF to create a .sff file from a SFFContainer object.
    \item Fixed a bug in the function to subset SFFContainers.
  }
}

\section{Version 1.7.4}{
  \itemize{
    \item Added ability to read in data from Roche's latest Amplicon Variant Analyzer (v2.7).
    \item New method ava2vcf to write the variants in an AVA-Set to a file in VCF format.
    \item Multiple bugfixes.
  }
}

\section{Version 1.5.2}{
  \itemize{
    \item Added new graphical components, options and annotations to the plotVariants function.
  }
}

\section{Version 1.3.1}{
  \itemize{
    \item Added method readSFF to read-in Roche's .sff (Standard Flowgram Format) files.
    \item Added functions for quality control on unaligned sequences in SFFContainer, ShortReadQ
      and QualityScaledDNAStringSet format.
    \item Added a function to write files in FASTQ format from SFFContainer.
  }
}

\section{Version 1.1.2}{
  \itemize{
    \item Added method for calculating Ti/Tv ratios.
  }
}

\section{Version 1.1.1}{
  \itemize{
    \item Fixed bug in plotAmpliconCoverage().
  }
}