@@ -5,7 +5,7 @@ Version: 1.9.2
 Date: 2012-08-16
 Author: Hans-Ulrich Klein, Christoph Bartenhagen, Christian Ruckert
 Maintainer: Hans-Ulrich Klein <h.klein@uni-muenster.de>
-Imports: BiocGenerics (>= 0.1.3), Biobase (>= 2.15.1), biomaRt, Biostrings, BSgenome, IRanges (>= 1.13.10), methods, R2HTML, Rsamtools, rtracklayer, ShortRead, VariantAnnotation
+Imports: BiocGenerics (>= 0.1.3), Biobase (>= 2.15.1), biomaRt, Biostrings, BSgenome, IRanges (>= 1.13.10), methods, R2HTML, Rsamtools, rtracklayer, ShortRead, VariantAnnotation, xtable, tools
 Depends: R (>= 2.12.0), BiocGenerics, Biobase, Biostrings, BSgenome.Scerevisiae.UCSC.sacCer2,TeachingDemos
 Suggests: rtracklayer, ShortRead, Rsamtools, BSgenome.Hsapiens.UCSC.hg19
 Description: The R453Plus1 Toolbox comprises useful functions for the analysis of data generated by Roche's 454 sequencing platform. It adds functions for quality assurance as well as for annotation and visualization of detected variants, complementing the software tools shipped by Roche with their product. Further, a pipeline for the detection of structural variants is provided.
